# uni_projects

./: README.md
Algorithms and data structures/Dynamic programming/: bbst.py  bst.py  linkedlist.py  main.py
Algorithms and data structures/Graph representations/: graphs.py
Algorithms and data structures/Hamilton_Eulerian/: hamilton_eulerian.py  projekt_4_jangru.docx
Artificial Intelligence/: lab1-145464-Gruszczynski.ipynb  lab10_145464_Gruszczynski.ipynb  lab2-145464-Gruszczynski.ipynb  lab3-145464-Gruszczynski.ipynb  lab4-145464-Gruszczynski.ipynb  lab5-145464-Gruszczynski.ipynb  lab9-145464-Gruszczynski.ipynb
Databases/: CASE_expression3.sql  Databases 1.sql  advanaced_queries2.sql  aggregation4.sql  ctn.sql  ddl_1.sql  ddl_2.sql  ddl_intro.sql  joins.sql  subqueries.sql  transactions1.sql  transactions2.sql
Information Retrival/: IR_jangru_145464_lab2.ipynb
Introduction to Artificial Intelligence/: Exercises2.ipynb  decision_aiding.ipynb  k-means_clustering.ipynb  optimazation_problem.ipynb  trees.ipynb
Introduction to Deep Learning/: README.md
Object-oriented programming/C++ Project Drugs&Diseases/code/: CMakeLists.txt  Cabinet.cpp  Cabinet.h  Date.cpp  Date.h  Program.cpp  Program.h  main.cpp
Object-oriented programming/C++ Project Drugs&Diseases/code/drugs/: Antibiotic.cpp  Antibiotic.h  AntiviralDrug.cpp  AntiviralDrug.h  Drug.cpp  Drug.h  FDAApproved.cpp  FDAApproved.h  FDANotApproved.cpp  FDANotApproved.h  Hallucinogen.cpp  Hallucinogen.h  Stimulant.cpp  Stimulant.h  unGroupedDrug.cpp  unGroupedDrug.h
Software engineering/: README.md
(+1371 files in other folders)
